hierarchy_ext.cpp split into two translation units to resolve Visual C++ 7.1 internal structure overflow

--- a/.gitattributes
+++ b/.gitattributes
@@ -55,9 +55,11 @@ iotbx/include/iotbx/pdb/atom_selection.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/construct_hierarchy.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy.h svneol=native#text/plain
+iotbx/include/iotbx/pdb/hierarchy_atom_bpl.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_atoms.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_atoms.h svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_atoms_bpl.cpp svneol=native#text/plain
+iotbx/include/iotbx/pdb/hierarchy_bpl.h svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_ext.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_write.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/input.cpp svneol=native#text/plain
