--- a/.gitattributes
+++ b/.gitattributes
@@ -174,6 +174,7 @@ scitbx/error/tst_error.py -text
 scitbx/include/scitbx/array_family/boost_python/selections_wrapper.h svneol=native#text/plain
 scitbx/include/scitbx/error_utils.h -text
 scitbx/include/scitbx/iso_surface.h -text
+scitbx/include/scitbx/math/euler_angles.h -text
 scitbx/include/scitbx/math/superpose.h -text
 scitbx/include/scitbx/matrix/delta_tensors.h -text
 scitbx/include/scitbx/misc/positive_getitem_index.h svneol=native#text/plain
