--- a/.gitattributes
+++ b/.gitattributes
@@ -230,3 +230,4 @@ smtbx/refinement/refinement_ext.cpp -text
 smtbx/refinement/tests/__init__.py -text
 smtbx/refinement/tests/tst_minimization.py -text
 smtbx/refinement/tests/tst_minimization_at_random.py -text
+smtbx/run_tests.py -text
