obsolete iotbx.pdb.parser moved to textal.iotbx_pdb_v0; new iotbx.pdb.records with re-worked parts of old parser.py

--- a/.gitattributes
+++ b/.gitattributes
@@ -82,6 +82,7 @@ iotbx/iotbx/pdb/Hy36.java svneol=native#text/plain
 iotbx/iotbx/pdb/atom_selection.py svneol=native#text/x-python
 iotbx/iotbx/pdb/extract_rfactors_resolutions_sigma.py -text
 iotbx/iotbx/pdb/hierarchy.py svneol=native#text/x-python
+iotbx/iotbx/pdb/records.py svneol=native#text/x-python
 iotbx/iotbx/pdb/tst_atom_selection.py svneol=native#text/x-python
 iotbx/iotbx/pdb/tst_extract_rfactors_resolutions_sigma.py -text
 iotbx/iotbx/shelx/errors.py -text
