direct assignment of integers to atom.serial, obj.resseq; atom.serial_as_int(), obj.resseq_as_int(); missing atom_with_labels.resid() added; iotbx.pdb.format_atom_record() removed (copies in phenix.autosol and textal.iotbx_pdb_v0)

--- a/iotbx/include/iotbx/pdb/SConscript
+++ b/iotbx/include/iotbx/pdb/SConscript
@@ -17,6 +17,7 @@ builder(
   target="#lib/iotbx_pdb",
   source=[
     "hybrid_36_c.c",
+    "hybrid_36_cpp.cpp",
     "utils.cpp",
     "hierarchy.cpp",
     "hierarchy_select.cpp",
