--- a/.gitattributes
+++ b/.gitattributes
@@ -63,6 +63,8 @@ iotbx/include/iotbx/pdb/hierarchy_bpl.h svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_ext.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_select.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hierarchy_write.cpp svneol=native#text/plain
+iotbx/include/iotbx/pdb/hybrid_36_cpp.cpp svneol=native#text/plain
+iotbx/include/iotbx/pdb/hybrid_36_cpp.h svneol=native#text/plain
 iotbx/include/iotbx/pdb/input.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/namespace.h svneol=native#text/plain
 iotbx/include/iotbx/pdb/overall_counts.cpp svneol=native#text/plain
