--- a/.gitattributes
+++ b/.gitattributes
@@ -66,6 +66,7 @@ iotbx/include/iotbx/pdb/hierarchy_write.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hybrid_36_cpp.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/hybrid_36_cpp.h svneol=native#text/plain
 iotbx/include/iotbx/pdb/input.cpp svneol=native#text/plain
+iotbx/include/iotbx/pdb/input_write.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/namespace.h svneol=native#text/plain
 iotbx/include/iotbx/pdb/overall_counts.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/rna_dna_atom_names.h -text
@@ -74,6 +75,9 @@ iotbx/include/iotbx/pdb/tst_hierarchy.py svneol=native#text/x-python
 iotbx/include/iotbx/pdb/tst_rna_dna_atom_names.py -text
 iotbx/include/iotbx/pdb/utils.cpp svneol=native#text/plain
 iotbx/include/iotbx/pdb/utils.h svneol=native#text/plain
+iotbx/include/iotbx/pdb/write_utils.cpp svneol=native#text/plain
+iotbx/include/iotbx/pdb/write_utils.h svneol=native#text/plain
+iotbx/include/iotbx/pdb/write_utils_bpl.h svneol=native#text/plain
 iotbx/iotbx/command_line/pdb.b_factor_stats.py svneol=native#text/x-python
 iotbx/iotbx/command_line/pdb.join_fragment_files.py svneol=native#text/x-python
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
