initial support for miniCBF; SLS Pilatus-6M

--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,7 @@ cbflib_adaptbx/detectors/tst_memory.cpp -text
 cbflib_adaptbx/include/cbflib_adaptbx/basic.h -text
 cbflib_adaptbx/include/cbflib_adaptbx/cbf_adaptor.h -text
 cbflib_adaptbx/include/cbflib_adaptbx/mar_adaptor.h -text
+cbflib_adaptbx/include/cbflib_adaptbx/sls_pilatus_adaptor.h -text
 cbflib_adaptbx/libtbx_config -text
 cctbx/boost_python/orientation_ext.cpp -text
 cctbx/cctbx/command_line/version.py -text
