--- a/.gitattributes
+++ b/.gitattributes
@@ -85,6 +85,7 @@ iotbx/iotbx/command_line/pdb.join_fragment_files.py svneol=native#text/x-python
 iotbx/iotbx/command_line/pdb.print_sequence.py -text
 iotbx/iotbx/command_line/pdb_as_fasta.py svneol=native#text/x-python
 iotbx/iotbx/detectors/cbf.py -text
+iotbx/iotbx/detectors/pilatus_minicbf.py -text
 iotbx/iotbx/examples/__init__.py svneol=native#text/x-python
 iotbx/iotbx/examples/mtz_free_flipper.py svneol=native#text/x-python
 iotbx/iotbx/examples/pdb_hierarchy.py svneol=native#text/x-python
