--- a/.gitattributes
+++ b/.gitattributes
@@ -23,6 +23,7 @@ cbflib_adaptbx/libtbx_config -text
 cctbx/boost_python/orientation_ext.cpp -text
 cctbx/cctbx/command_line/version.py -text
 cctbx/cctbx/crystal_orientation.py -text
+cctbx/cctbx/examples/quartz_structure.py svneol=native#text/x-python
 cctbx/cctbx/geometry_restraints/tst_proxy_registry.py svneol=native#text/x-python
 cctbx/cctbx/regression/random_generator_state.pickle -text
 cctbx/cctbx/regression/structure_ideal.pickle -text
