added cbetadev function to mmtbx commandline tools - this program will analyze a protein file and report back on the relative location of the CB atom in relation to its ideal position - useful in identifying outliers that may indicate misfit sidechains and/or backbone - also added test cases to the tst_validate_utils.py to exercise this function

--- a/.gitattributes
+++ b/.gitattributes
@@ -144,6 +144,7 @@ mmtbx/mmtbx/bulk_solvent/tst_bulk_solvent_and_scaling.py -text
 mmtbx/mmtbx/chemical_components/__init__.py -text
 mmtbx/mmtbx/chemical_components/cif_parser.py -text
 mmtbx/mmtbx/chemical_components/tst.py -text
+mmtbx/mmtbx/command_line/cbetadev.py -text
 mmtbx/mmtbx/command_line/cif_as_mtz.py -text
 mmtbx/mmtbx/command_line/maps.py -text
 mmtbx/mmtbx/command_line/pdb_atom_selection.py svneol=native#text/x-python
