- OpenMP support (use configure -enable_open_mp)

--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -199,11 +199,18 @@ if (sys.platform == "win32"):
       opts = ["/Od"]
     if not libtbx.env.build_options.enable_boost_threads:
       opts.append('/DBOOST_DISABLE_THREADS')
+    if libtbx.env.build_options.enable_open_mp:
+      if env_base["MSVS_VERSION"] == '7.1':
+        raise RuntimeError("OpenMP is only supported by "
+                           "Visual Studio 2005 (Visual C++ 8) and up)")
+      opts.append('/openmp')
     if (libtbx.env.build_options.debug_symbols):
       raise RuntimeError("Debug build not supported.")
     env_etc.cxxflags_base.extend(opts)
     env_etc.ccflags_base.extend(opts)
     env_etc.shlinkflags = "/nologo /incremental:no /dll"
+    if libtbx.env.build_options.enable_open_mp:
+      env_etc.shlinkflags += " /openmp"
     env_etc.shlinkflags_bpl = env_etc.shlinkflags
     env_etc.libm = []
   else:
@@ -283,6 +290,8 @@ else:
       opts.insert(0, "-g")
     if not libtbx.env.build_options.enable_boost_threads:
       opts.append('-DBOOST_DISABLE_THREADS')
+    if libtbx.env.build_options.enable_open_mp:
+      raise RuntimeError('OpenMP not supported on Tru64')
     env_etc.cxxflags_base.extend(opts)
     env_etc.ccflags_base.extend(opts)
     if (static_exe):
@@ -330,6 +339,8 @@ else:
       opts.insert(0, "-g")
     if not libtbx.env.build_options.enable_boost_threads:
       opts.append('-DBOOST_DISABLE_THREADS')
+    if libtbx.env.build_options.enable_open_mp:
+      raise RuntimeError('OpenMP not supported on HP-UX')
     env_etc.cxxflags_base.extend(opts)
     env_etc.ccflags_base.extend(opts)
     if (static_exe):
@@ -412,12 +423,27 @@ else:
       opts.insert(0, "-g")
     if not libtbx.env.build_options.enable_boost_threads:
       opts.append('-DBOOST_DISABLE_THREADS')
+    if libtbx.env.build_options.enable_open_mp:
+      operating_system = easy_run.fully_buffered(
+        command='/bin/uname -o').stdout_lines[0].strip()
+      kernel_release = easy_run.fully_buffered(
+        command='/bin/uname -r').stdout_lines[0].strip()
+      if (env_etc.gcc_version >= 42000
+          or (env_etc.gcc_version >= 41000
+              and operating_system == 'GNU/Linux'
+              and kernel_release.endswith('FC5'))):
+        opts.append('-fopenmp')
+      else:
+        raise RuntimeError('OpenMP is only supported by gcc 4.2 and up '
+                           'or by gcc 4.1 on fedora core 5')
     env_etc.cxxflags_base.extend(opts)
     env_etc.ccflags_base.extend(opts)
     if (static_exe):
       env_base.Prepend(LINKFLAGS=["-static"])
       static_exe = None
     env_etc.shlinkflags = "-shared"
+    if libtbx.env.build_options.enable_open_mp:
+      env_etc.shlinkflags += " -fopenmp"
     env_etc.shlinkflags_bpl = env_etc.shlinkflags
   elif (env_etc.compiler == "unix_ecc"):
     env_etc.static_libraries = 0
@@ -444,6 +470,8 @@ else:
       opts.insert(0, "-g")
     if not libtbx.env.build_options.enable_boost_threads:
       opts.append('-DBOOST_DISABLE_THREADS')
+    if libtbx.env.build_options.enable_open_mp:
+      raise RuntimeError('OpenMP is not supported by ecc')
     env_etc.cxxflags_base.extend(opts)
     env_etc.ccflags_base.extend(opts)
     env_etc.shlinkflags = "-shared"
@@ -473,6 +501,9 @@ else:
       opts.insert(0, "-g")
     if not libtbx.env.build_options.enable_boost_threads:
       opts.append('-DBOOST_DISABLE_THREADS')
+    if libtbx.env.build_options.enable_open_mp:
+      raise NotImplementedError('OpenMP support not implemented '
+                                'for Intel C++ compiler yet')
     env_etc.cxxflags_base.extend(opts)
     env_etc.ccflags_base.extend(opts)
     env_etc.shlinkflags = "-shared"
@@ -506,6 +537,8 @@ else:
         % libtbx.env.dist_path("boost"))
     if not libtbx.env.build_options.enable_boost_threads:
       env_etc.cxxflags_base.append("-DBOOST_DISABLE_THREADS")
+    if libtbx.env.build_options.enable_open_mp:
+      raise RuntimeError('OpenMP not supported on IRIX')
     env_etc.ccflags_base = []
     if (libtbx.env.build_options.optimization):
       opts = ["-DNDEBUG", "-O2", "-OPT:Olimit=0"]
@@ -571,6 +604,10 @@ else:
     env_etc.cxxflags_base.append("-ftemplate-depth-130")
     if not libtbx.env.build_options.enable_boost_threads:
       env_etc.cxxflags_base.append("-DBOOST_DISABLE_THREADS")
+    if libtbx.env.build_options.enable_open_mp:
+      if env_etc.compiler != "darwin_gcc_4.2":
+        raise RuntimeError("OpenMP only supported by gcc 4.2 on MacOS X")
+      env_etc.cxxflags_base.append('-fopenmp')
     if (libtbx.env.build_options.optimization):
       opts = ["-DNDEBUG", "-O3", "-ffast-math", "-ftrapping-math"]
       if (cxx == "c++" and cxx_version == "4.0.0"):
@@ -590,6 +627,9 @@ else:
       "-w", # suppress "source/lib does not exist" warning
       "-bundle",
       "-undefined", "dynamic_lookup"]
+    if libtbx.env.build_options.enable_open_mp:
+      env_etc.shlinkflags.append('-fopenmp')
+      env_etc.shlinkflags_bpl.insert(0, '-fopenmp')
     if (static_exe):
       # no action required
       static_exe = None
