--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -23,24 +23,6 @@ if (1):
 
 class empty: pass
 
-def get_gcc_version():
-  gcc_version = easy_run.fully_buffered(command="gcc --version") \
-    .raise_if_errors() \
-    .stdout_lines[0].strip()
-  flds = gcc_version.split()
-  if (len(flds) < 3 or flds[0] != "gcc" or flds[1] != "(GCC)"):
-    return None
-  major_minor_patchlevel = flds[2].split(".")
-  if (len(major_minor_patchlevel) != 3):
-    return None
-  num = []
-  for fld in major_minor_patchlevel:
-    try: i = int(fld)
-    except ValueError:
-      return None
-    num.append(i)
-  return ((num[0]*100)+num[1])*100+num[2]
-
 def set_python_include_and_libs(env_etc):
   env_etc.python_include = libtbx.config.python_include_path()
   if (sys.platform == "win32"):
@@ -371,7 +353,7 @@ else:
                         + " -expect_unresolved '_Py*'"
     env_etc.shlinkflags_bpl = env_etc.shlinkflags
   elif (env_etc.compiler == "unix_gcc"):
-    env_etc.gcc_version = get_gcc_version()
+    env_etc.gcc_version = libtbx.config.get_gcc_version()
     env_etc.static_libraries = 0
     env_etc.static_bpl = 0
     env_base.Replace(
