libtbx.scons: OpenMP working_in_main=True, working_in_shared_lib=False

--- a/libtbx/SConscript
+++ b/libtbx/SConscript
@@ -594,23 +594,9 @@ env_etc.libtbx_build = libtbx.env.build_path
 env_etc.libtbx_include = libtbx.env.under_build("include")
 env_etc.libtbx_lib = libtbx.env.lib_path
 
-if not libtbx.env.build_options.disable_openmp:
-  openmp_conf = libtbx.config.openmp_config(env_base, env_etc)
-  if openmp_conf.is_working:
-    try:
-      env_etc.cxxflags_base.append(openmp_conf.command_line_option)
-    except AttributeError:
-      env_etc.cxxflags_base += " " +  openmp_conf.command_line_option
-    try:
-      env_etc.shlinkflags.append(openmp_conf.command_line_option)
-    except AttributeError:
-      env_etc.shlinkflags += " " +  openmp_conf.command_line_option
-    try:
-      env_etc.shlinkflags_bpl.append(openmp_conf.command_line_option)
-    except AttributeError:
-      env_etc.shlinkflags_bpl += " " +  openmp_conf.command_line_option
-  else:
-    print "libtbx.scons: disabling OpenMP"
-    libtbx.env.build_options.disable_openmp = True
+env_etc.openmp_conf = libtbx.config.openmp_config(
+  is_disabled=libtbx.env.build_options.disable_openmp,
+  env_base=env_base,
+  env_etc=env_etc).report(prefix="libtbx.scons: ")
 
 Export("env_base", "env_etc")
