- Python binding for those omp_xxx functions for which that makes sense - A nicer Python OO interface - test that the thread number control works from Python

--- a/.gitattributes
+++ b/.gitattributes
@@ -226,6 +226,11 @@ scitbx/scitbx/iso_surface/iso_surface_ext.cpp -text
 scitbx/scitbx/iso_surface/tst_iso_surface.m -text
 scitbx/scitbx/iso_surface/tst_iso_surface.py -text
 scitbx/scitbx/math/sphere_sphere_intersection.py svneol=native#text/x-python
+scitbx/scitbx/openmp/SConscript -text
+scitbx/scitbx/openmp/__init__.py -text
+scitbx/scitbx/openmp/openmp.cpp -text
+scitbx/scitbx/openmp/tests/tst.py -text
+scitbx/scitbx/openmp/tests/tst_environment.cpp -text
 scitbx/scitbx/source_generators/flex_fwd_h.py -text
 scitbx/scitbx/sparse/__init__.py -text
 scitbx/scitbx/sparse/boost_python/SConscript -text
